fix: repository url

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
 
     <div class="github">
-        <a href="https://github.com/0kyn/pumpkins-fall" title="Github repository">
+        <a href="https://github.com/0kyn/halloween-2021" title="Github repository">
             <img src="./images/logo-github.png" alt="logo Github">
         </a>
     </div>
